force-app/main/default/objects/Order_Payment_Link__c/Order_Payment_Link__c.object-meta.xml
<CustomObject>
    <label>Order Payment Link</label>
    <nameField>
        <displayFormat>OPL-{0000000}</displayFormat>
        <label>Order Payment Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Payment Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>