force-app/main/default/objects/Order_Payment_Link__c/fields/Email_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Email_Recipient__c</fullName>
    <label>Email Recipient</label>
    <type>Email</type>
</CustomField>