force-app/main/default/objects/Order_Payment_Link__c/fields/Link_Validity__c.field-meta.xml
<CustomField>
    <fullName>Link_Validity__c</fullName>
    <label>Link Validity</label>
    <type>DateTime</type>
</CustomField>