force-app/main/default/objects/Order_Payment_Link__c/fields/Notify_user__c.field-meta.xml
<CustomField>
    <fullName>Notify_user__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Notify user</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Order_Payment_Links</relationshipName>
    <type>Lookup</type>
</CustomField>