force-app/main/default/objects/Order_Payment_Link__c/fields/Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Line Item</label>
    <referenceTo>order_line_item__c</referenceTo>
    <relationshipName>Tad_Payment_Links</relationshipName>
    <type>Lookup</type>
</CustomField>