force-app/main/default/objects/Order_Payment_Link__c/fields/TAD_Order__c.field-meta.xml
<CustomField>
    <fullName>TAD_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TAD Order</label>
    <referenceTo>TAD_Order__c</referenceTo>
    <relationshipName>Tad_Payment_Links</relationshipName>
    <type>Lookup</type>
</CustomField>